# asr_with_llm

./: LICENSE  README.md  pyproject.toml
input/: README.md
src/constants/: paths.py
src/data/: data_collator.py  dataset.py
src/lightning_utils/: lightning_data_module.py  lightning_module.py
src/module/: asr_with_llm.py  projector.py
src/scripts/: test.py  train.py
