[project]
name = "asr-with-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "lightning>=2.5.2",
    "pandas>=2.3.0",
    "peft>=0.15.2",
    "protobuf>=6.31.1",
    "sentencepiece>=0.2.0",
    "torch==2.5",
    "torchaudio==2.5",
    "transformers>=4.53.0",
    "trl>=0.19.0",
    "wandb>=0.20.1",
]
